2003-01-17  Ralf Nolden <nolden@kde.org>
    * Added second patch for sorting the books in the doctreeview. Qt is now on top, then all other
      kdelibs-apidocs, then automatically look up if there are other *-apidocs packages installed
      (like libkonq)
    * fixed the sorting of the additional files like classes.html into the tree by inserting 
      the classes first, then sort, then insert the additional files and move them to the top of a book
    * fixed the problem with the smearing of the treeview if the arglist is used by stripping down
      enums to enum Name {} 
    
2003-01-14  Ralf Nolden <nolden@kde.org>
    * Added patch for displaying doxygen-generated api-docs from KDE 3
      originally by Stephan Kulow <coolo@kde.org>, adapted by Dirk Schmidt <Dreisam-RD@gmx.de>
 
2002-10-31  F@lk Brettschneider <falk@kdevelop.org>
    * Applied a modified version of Tim Alley's patch to make jump-to-error work on Red Hat 8.0 again

2002-10-30  F@lk Brettschneider <falk@kdevelop.org>
    * Aber einen hammer noch!!! :-)
      bugfix: jump-to-error repaired for German translation of gmake's output
              (in coutputwidget.cpp)
      
2002-08-29  Roland Krause  <roland@ca.wai.com>
    * This was it. Thanks to my friends Falk and Harry 
      and to the many other people that made this version 
      as cool as could be.

      There once was a hacker named Harry 
      Who's speed was at least - lets say - scary
      In C plus he was witted
      So he hacked and committed 
      Until one day he met the code fairy

      There once was a hacker named Falk
      Whom windows was reason to balk
      Many views to juggle
      Was his furious struggle
      Til' he vanished in null pointer calc.


2002-07-23  Harald Fernengel <harry@kdevelop.org>
    * bugfix: Applied Jens Zurheide's memory leak patches
    * bugfix: Fix outputwidget for Qt 3.0.5
2002-07-19  F@lk Brettschneider <falk@kdevelop.org>