@@ -1,3 +1,9 @@
+2003-01-19  Ralf Nolden <nolden@kde.org>
+    * fixed bug with clicking on error message in the output widget
+    * fixed bug with Qt docs where enum and property tags weren't jumping to the docs
+
+    * This is the bugfix release 2.1.5 for KDE 3.1
+    
 2003-01-17  Ralf Nolden <nolden@kde.org>
     * Added second patch for sorting the books in the doctreeview. Qt is now on top, then all other
       kdelibs-apidocs, then automatically look up if there are other *-apidocs packages installed
